clocks: stop spacing getting unevenly squished when container is longer than the page

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -56,6 +56,8 @@ clock {
 	grid-template-columns: repeat(auto-fill, 5rem);
 	grid-template-rows: repeat(auto-fit, 10rem);
 	grid-gap: 1rem;
+	width: 125rem;
+	width: fit-content;
 	padding: 2rem;
 	grid-template-areas:
 		"c678 c678 c546 c546 c236 c236 c245 c245 c172 c172 c420 c420 c438 c438 c484 c484 c720 c720 c88 c88 . "
